--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,19 +13,24 @@ editor_options:
 
 :::: {style="display: flex;"}
 ::: {style="min-width: 300px; max-width: 300px"}
-<img src="https://joonsukkang.github.io/mf/figure/tree_toy_altflash_1.Rmd/unnamed-chunk-7-2.png" width="400">
+<img src="https://joonsukkang.github.io/mf/figure/tree_toy_altflash_1.Rmd/unnamed-chunk-14-2.png" width="400">
 :::
 ::: {}
 + [altflash on tree toy data](tree_toy_altflash_1.html)
-  + priors are set as `g.l=g.f=gammamix(pi=c(0.1, 0.9), shape=c(1,1), scale=c(0,1))`
-  + two-step procedure is implemented. 
-    + the first step is to stabilize fit given `g.l,g.f`
-    + the second step is to fully update (including `g.l,g.f`)
-  + extracting `(1,0,0,0), (0,1,0,0), (0,0,1,0), (0,0,0,1)` is easy for noiseless data; harder for noisy data.
-    + given $K\geq4$, altflash always captures the desired pattern, which attains a higher elbo
+  + method
+    + priors are set as point-exponential: `g.l=g.f=gammamix(pi=c(0.1, 0.9), shape=c(1,1), scale=c(0,1))`
+    + two-step procedure is implemented. 
+      + the first step is to stabilize the fit given `g.l,g.f`
+      + the second step is to fully update (including `g.l,g.f`)
+    + use denoised (rank-2) data
+  + results
+    + all four patterns `(1,0,0,0), (0,1,0,0), (0,0,1,0), (0,0,0,1)` are captured when $K\geq4$
+    + when $K<4$, only $K$ of the four patterns are captured
+    + posterior mean of $L$ and $F$ are symmetric (up to scale)
 
 :::
 ::::
+
 
 
 
